--- a/app/src/main/res/layout/activity_elegir_tema_search_and_list.xml
+++ b/app/src/main/res/layout/activity_elegir_tema_search_and_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark"
-    android:padding="@dimen/elegtema_margin1"
+    android:padding="20dp"
     tools:context=".ElegirTemaSearchAndList">
 
     <androidx.cardview.widget.CardView
@@ -21,7 +21,7 @@
             android:id="@+id/card_tema_search_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:queryHint="@string/busctema">
+            app:queryHint="Buscar tema..">
         </androidx.appcompat.widget.SearchView>
 
     </androidx.cardview.widget.CardView>
@@ -41,7 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintTop_toBottomOf="@+id/card_tema_search"
-        android:layout_marginTop="@dimen/elegtema_margin1">
+        android:layout_marginTop="20dp">
 
     </ListView>
 </androidx.constraintlayout.widget.ConstraintLayout>
